# ros-mcp-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: integration-tests.yml  sync-main-to-develop.yml
docs/: architecture.md  contributing.md  restructuring_plan.md  testing.md
docs/install/: connect.md  from-source.md  http-transport.md  installation.md  pip.md  rosbridge.md  troubleshooting.md
docs/install/clients/: chatgpt.md  claude-code.md  claude-desktop.md  codex-cli.md  cursor.md  custom-client.md  gemini-cli.md  robot-mcp-client.md
examples/1_turtlesim/: README.md
examples/2_gemini/: README.md
examples/3_limo_mobile_robot/isaac_sim/: README.md
examples/3_limo_mobile_robot/real_robot/: README.md
examples/4_unitree_go2/isaac_sim/: README.md
examples/4_unitree_go2/real_robot/: README.md
examples/5_docker_turtlesim/: README.md
examples/6_chatgpt/: README.md
examples/7_cursor/: README.md
examples/8_images/: README.md
ros_mcp/: main.py
ros_mcp/prompts/: test_connection_tools.py  test_server_tools.py  test_topics_tools.py
ros_mcp/resources/: ros_metadata.py
ros_mcp/tools/: actions.py  connection.py  images.py  nodes.py  parameters.py  robot_config.py  services.py  topics.py
ros_mcp/utils/: network_utils.py  response.py  rosapi_types.py
tests/installation/: __init__.py
tests/integration/: conftest.py  docker-compose.yml  test_connection.py  test_detect_version.py  test_quick_detect.py
tests/integration/docker/: .gitattributes  Dockerfile.ros1-melodic  Dockerfile.ros1-noetic  Dockerfile.ros2-humble  Dockerfile.ros2-jazzy  entrypoint-ros2.sh  ros1_launch.launch  ros2_launch.py
tests/integration/scripts/: run-all-cross-tests.sh  run-all-distros.sh  run-cross-test.sh  run-detect-cross-test.sh  run-detect-test.sh  run-tests-all-distros.sh  run-tests.sh
